reorder gaming, fix modal event name font size on safari

--- a/src/style.css
+++ b/src/style.css
@@ -137,5 +137,6 @@ body {
 }
 
 #eventinfoname {
-  font-size: 24px;
+  font-size: 150%;
+  -webkit-text-size-adjust: 120%;
 }
